src/test/ui/unwind-abis/feature-gate-system-unwind.stderr
error[E0658]: system-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-system-unwind.rs:4:8
   |
LL | extern "system-unwind" fn f() {}
   |        ^^^^^^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
